Fixing submenus on mobile

--- a/sass/03-components/_02-navigation.scss
+++ b/sass/03-components/_02-navigation.scss
@@ -173,6 +173,8 @@
 /*_______ Submenus _______*/
 	.sub-menu{
 		display: block !important;
+		position: static;
+		float: none !important;
 		list-style: none;
 		width: auto;
 		margin: 0 auto;
@@ -180,7 +182,7 @@
 		height: auto;
 		padding: 0 0 0 .5rem;
 		margin: 1rem 0 0;
-		text-shadow: none;
+		box-shadow: none;
 		z-index: 10;
 		@include tablet{
 			position: absolute;
