--- a/style.css
+++ b/style.css
@@ -1868,6 +1868,8 @@ body.admin-bar .site-header {
 }
 .main-navigation .sub-menu {
   display: block !important;
+  position: static;
+  float: none !important;
   list-style: none;
   width: auto;
   margin: 0 auto;
@@ -1875,7 +1877,7 @@ body.admin-bar .site-header {
   height: auto;
   padding: 0 0 0 0.5rem;
   margin: 1rem 0 0;
-  text-shadow: none;
+  box-shadow: none;
   z-index: 10;
 }
 @media only screen and (min-width: 1024px) {
